2006-07-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/depgraph.py:
	  doc cleanups

2006-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  remove unused module

2006-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/dag.py:
	  DAG was never intended to only take int types, so use %r
	  everywhere for type
	  Move some debugging to log, it's too verbose otherwise
	* flumotion/manager/depgraph.py:
	  use strings for type, makes debug a lot more readable
	  add a FIXME for a very doubtful two lines of code
	  speed up turning downstream components to hungry when we
	  stop a component
	* flumotion/manager/component.py:
	  use strings for type, makes debug a lot more readable
	* flumotion/test/test_dag.py:
	* flumotion/test/test_manager_depgraph.py:
	* flumotion/test/test_manager_manager.py:
	  Fix tests as well

2006-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  add a doc
	* flumotion/component/feedcomponent010.py:
	  make defaults for turning hungry smaller
	  fix the check_for_buffer_data callLater; components now
	  turn hungry (slowly) when they stop receiving data

2006-07-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* TODO:
	* flumotion/common/dag.py:
	Added logging.  Remove references to nodes that may not exist
	anymore, which end up actually being added to the sorted list.
	* flumotion/manager/depgraph.py:
	More debug.  Also remove dag nodes from _state when the component
	and worker are removed.
	* flumotion/test/test_manager_depgraph.py:
	Added test that adds components, removes them, adds them again.
	* flumotion/test/test_pb.py:
	Remove un-needed print statement.
	Fixes #408.

2006-07-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/job/job.py:
	  Don't give a warning about 'unknown message' for every sendFeed -
	  use elif rather than if.
